deploy: 406d3151c65aedbf77f9e3240f5e71d9ff17e43d

--- a/index.html
+++ b/index.html
@@ -343,6 +343,9 @@
                   <li>
                     <a href="#get-status-page" class="toc-h2 toc-link" data-title="Get Status Page">Get Status Page</a>
                   </li>
+                  <li>
+                    <a href="#delete-status-page" class="toc-h2 toc-link" data-title="Delete Status Page">Delete Status Page</a>
+                  </li>
               </ul>
           </li>
       </ul>
@@ -488,7 +491,11 @@ Content-Type: application/json
 </span></code></pre></div>
 <p>This endpoint retrieves a specific status page derived from the id.</p>
 <h3 id='http-request-2'>HTTP Request</h3>
-<p><code>GET /api/status-pages/{id}</code></p>
+<p><code>GET /api/status-pages/{statusPageId}</code></p>
+<h2 id='delete-status-page'>Delete Status Page</h2>
+<p>This endpoint deletes the status page.</p>
+<h3 id='http-request-3'>HTTP Request</h3>
+<p><code>DELETE /api/status-pages/{statusPageId}</code></p>
 
       </div>
       <div class="dark-box">
